# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-06-05  Christian Heller  <christian.heller@tuxtax.de>

        * Continue implementing and testing memoriser (allocation, deallocation)
        * Restructure container functionality (allocate, set)

2011-06-03  Christian Heller  <christian.heller@tuxtax.de>

        * Continue "executor/referencer/setter/"
        * Add file "executor/converter/encoder/abstraction_encoder.c"
        * Add function "test_memoriser_allocation"
        * Add file "offset_adder.c" for factoring out offset functionality

2011-05-27  Christian Heller  <christian.heller@tuxtax.de>

        * Implement "model" and "item" in "executor/memoriser/allocator/"
        * Continue "executor/referencer/setter/"

2011-05-26  Christian Heller  <christian.heller@tuxtax.de>

        * Correct "executor/comparator/", so that not only models, but also details are compared deeply
        * Continue "executor/referencer/setter/"

2011-05-13  Christian Heller  <christian.heller@tuxtax.de>

        * Continue "executor/referencer/setter/"

2011-05-08  Christian Heller  <christian.heller@tuxtax.de>

        * Clean up old files in "executor/comparator/"
        * Start refactoring files in "executor/referencer/setter/"

2011-05-07  Christian Heller  <christian.heller@tuxtax.de>

        * Add (German language) beginner's manual written by two students

2011-05-05  Christian Heller  <christian.heller@tuxtax.de>

        * Complete file "model_comparator.c"
        * Add example applications created by student

2011-05-03  Christian Heller  <christian.heller@tuxtax.de>
