@@ -1,0 +1,137 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<XMI verified="false" xmi.version="1.2" timestamp="2011-06-06T21:48:19" xmlns:UML="http://schema.omg.org/spec/UML/1.3">
+ <XMI.header>
+  <XMI.documentation>
+   <XMI.exporter>umbrello uml modeller http://uml.sf.net</XMI.exporter>
+   <XMI.exporterVersion>1.5.8</XMI.exporterVersion>
+   <XMI.exporterEncoding>UnicodeUTF8</XMI.exporterEncoding>
+  </XMI.documentation>
+  <XMI.metamodel xmi.version="1.3" href="UML.xml" xmi.name="UML"/>
+ </XMI.header>
+ <XMI.content>
+  <UML:Model isSpecification="false" isAbstract="false" isLeaf="false" xmi.id="m1" isRoot="false" name="UML Model">
+   <UML:Namespace.ownedElement>
+    <UML:Stereotype visibility="public" isSpecification="false" namespace="m1" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="folder" name="folder"/>
+    <UML:Stereotype visibility="public" isSpecification="false" namespace="m1" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="datatype" name="datatype"/>
+    <UML:Model stereotype="folder" visibility="public" isSpecification="false" namespace="m1" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="Logical View" name="Logical View">
+     <UML:Namespace.ownedElement>
+      <UML:Package stereotype="folder" visibility="public" isSpecification="false" namespace="Logical View" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="Datatypes" name="Datatypes">
+       <UML:Namespace.ownedElement>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="jskHO9cM7DJc" name="int"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="aURZQbSHUdXM" name="char"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="Mc1xwBif1QuP" name="bool"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="ZWjhj1HHThqu" name="float"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="II9ntg7EI69C" name="double"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="HpsHGmenJOU0" name="short"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="NkIqR6ihPsSG" name="long"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="WXSpec1tRrAh" name="unsigned int"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="epVvBxtWf9M4" name="unsigned short"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="G5mdvEtRmKEQ" name="unsigned long"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="wGHL7S3jFWcO" name="string"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" elementReference="PaiP2f1jlWkn" isRoot="false" xmi.id="TvxnizkNJI99" name="wchar_t*"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" elementReference="1OSX0C5IvKJA" isRoot="false" xmi.id="I7tArMldahe6" name="void**"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" elementReference="jskHO9cM7DJc" isRoot="false" xmi.id="yvIYaudLiyEY" name="int*"/>
+        <UML:DataType stereotype="datatype" visibility="public" isSpecification="false" namespace="Datatypes" isAbstract="false" isLeaf="false" elementReference="1OSX0C5IvKJA" isRoot="false" xmi.id="4f2sGEXCAoji" name="void*"/>
+       </UML:Namespace.ownedElement>
+      </UML:Package>
+      <UML:Class visibility="public" isSpecification="false" namespace="Logical View" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="RUu7dGBrJvUC" name="part">
+       <UML:Classifier.feature>
+        <UML:Attribute visibility="public" isSpecification="false" xmi.id="fKZmrTypPt1q" type="TvxnizkNJI99" name="name"/>
+        <UML:Attribute visibility="public" isSpecification="false" xmi.id="l5wAzxyMVekY" type="TvxnizkNJI99" name="abstraction"/>
+        <UML:Attribute visibility="public" isSpecification="false" xmi.id="HlH3FzoismVa" type="4f2sGEXCAoji" name="model"/>
+        <UML:Attribute visibility="public" isSpecification="false" xmi.id="lEy3W5AHB6P8" type="I7tArMldahe6" name="details"/>
+       </UML:Classifier.feature>
+      </UML:Class>
+      <UML:Class visibility="public" isSpecification="false" namespace="Logical View" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="8MeugsIa6ZvE" name="item">
+       <UML:Classifier.feature>
+        <UML:Attribute visibility="public" isSpecification="false" xmi.id="koLtsl1t9UO9" type="4f2sGEXCAoji" name="data"/>
+        <UML:Attribute visibility="public" isSpecification="false" xmi.id="eRPamik4odCf" type="yvIYaudLiyEY" name="count"/>
+        <UML:Attribute visibility="public" isSpecification="false" xmi.id="jESqioyKGLu0" type="yvIYaudLiyEY" name="size"/>
+       </UML:Classifier.feature>
+      </UML:Class>
+      <UML:Class visibility="public" isSpecification="false" namespace="Logical View" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="zwvCQYas2Szd" name="array"/>
+      <UML:Class visibility="public" isSpecification="false" namespace="Logical View" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="j8V04zDCJp4z" name="value"/>
+      <UML:Class visibility="public" isSpecification="false" namespace="Logical View" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="PaiP2f1jlWkn" name="wchar_t"/>
+      <UML:Class visibility="public" isSpecification="false" namespace="Logical View" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="1OSX0C5IvKJA" name="void"/>
+     </UML:Namespace.ownedElement>
+     <XMI.extension xmi.extender="umbrello">
+      <diagrams>
+       <diagram showopsig="1" linecolor="#ff0000" snapx="10" showattribassocs="1" snapy="10" linewidth="0" showattsig="1" showpubliconly="1" showpackage="0" showstereotype="0" name="architecture" font="Sans Serif,10,-1,5,50,0,0,0,0,0" canvasheight="565" canvaswidth="999" localid="" snapcsgrid="0" showgrid="0" showops="1" usefillcolor="1" fillcolor="#ffffc0" zoom="100" xmi.id="rtBHrl7hdK9k" documentation="" showscope="1" snapgrid="1" showatts="1" type="1">
+        <widgets>
+         <classwidget linecolor="#ff0000" usesdiagramfillcolor="0" linewidth="none" showoperations="1" usesdiagramusefillcolor="0" showpubliconly="1" showpackage="0" x="50" showattsigs="601" y="30" showattributes="1" font="Sans Serif,10,-1,5,50,0,0,0,0,0" width="166" isinstance="0" usefillcolor="1" fillcolor="#ffffc0" xmi.id="RUu7dGBrJvUC" showscope="1" height="88" showopsigs="601"/>
+         <classwidget linecolor="#ff0000" usesdiagramfillcolor="0" linewidth="none" showoperations="1" usesdiagramusefillcolor="0" showpubliconly="1" showpackage="0" x="360" showattsigs="601" y="30" showattributes="1" font="Sans Serif,10,-1,5,50,0,0,0,0,0" width="100" isinstance="0" usefillcolor="1" fillcolor="#ffffc0" xmi.id="8MeugsIa6ZvE" showscope="1" height="72" showopsigs="601"/>
+         <classwidget linecolor="none" usesdiagramfillcolor="1" linewidth="none" showoperations="1" usesdiagramusefillcolor="1" showpubliconly="1" showpackage="0" x="580" showattsigs="601" y="30" showattributes="1" font="Sans Serif,10,-1,5,50,0,0,0,0,0" width="50" isinstance="0" usefillcolor="1" fillcolor="none" xmi.id="zwvCQYas2Szd" showscope="1" height="32" showopsigs="601"/>
+         <classwidget linecolor="none" usesdiagramfillcolor="1" linewidth="none" showoperations="1" usesdiagramusefillcolor="1" showpubliconly="1" showpackage="0" x="730" showattsigs="601" y="30" showattributes="1" font="Sans Serif,10,-1,5,50,0,0,0,0,0" width="49" isinstance="0" usefillcolor="1" fillcolor="none" xmi.id="j8V04zDCJp4z" showscope="1" height="32" showopsigs="601"/>
+         <notewidget width="313" x="50" noteType="0" y="170" usesdiagramusefillcolor="1" usesdiagramfillcolor="1" isinstance="0" fillcolor="none" height="181" linecolor="none" xmi.id="iM3PIGx0UNoA" usefillcolor="1" linewidth="none" font="Sans Serif,10,-1,5,50,0,0,0,0,0" text="A compound is not a structure any longer. It is just a simple pointer array that may contain parts.&#xa;A part keeps meta information about the actual model it points to. The model may be of any kind of abstraction (type), e.g. integer, double, fraction, pointer array (representing a compound with dynamic size)."/>
+        </widgets>
+        <messages/>
+        <associations/>
+       </diagram>
+      </diagrams>
+     </XMI.extension>
+    </UML:Model>
+    <UML:Model stereotype="folder" visibility="public" isSpecification="false" namespace="m1" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="Use Case View" name="Use Case View">
+     <UML:Namespace.ownedElement/>
+    </UML:Model>
+    <UML:Model stereotype="folder" visibility="public" isSpecification="false" namespace="m1" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="Component View" name="Component View">
+     <UML:Namespace.ownedElement/>
+    </UML:Model>
+    <UML:Model stereotype="folder" visibility="public" isSpecification="false" namespace="m1" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="Deployment View" name="Deployment View">
+     <UML:Namespace.ownedElement/>
+    </UML:Model>
+    <UML:Model stereotype="folder" visibility="public" isSpecification="false" namespace="m1" isAbstract="false" isLeaf="false" isRoot="false" xmi.id="Entity Relationship Model" name="Entity Relationship Model">
+     <UML:Namespace.ownedElement/>
+    </UML:Model>
+   </UML:Namespace.ownedElement>
+  </UML:Model>
+ </XMI.content>
+ <XMI.extensions xmi.extender="umbrello">
+  <docsettings viewid="rtBHrl7hdK9k" uniqueid="iM3PIGx0UNoA" documentation=""/>
+  <listview>
+   <listitem open="1" type="800" id="Views">
+    <listitem open="1" type="801" id="Logical View">
+     <listitem open="0" type="807" id="rtBHrl7hdK9k" label="architecture"/>
+     <listitem open="1" type="813" id="zwvCQYas2Szd"/>
+     <listitem open="1" type="813" id="8MeugsIa6ZvE">
+      <listitem open="0" type="814" id="koLtsl1t9UO9"/>
+      <listitem open="0" type="814" id="eRPamik4odCf"/>
+      <listitem open="0" type="814" id="jESqioyKGLu0"/>
+     </listitem>
+     <listitem open="1" type="813" id="RUu7dGBrJvUC">
+      <listitem open="0" type="814" id="fKZmrTypPt1q"/>
+      <listitem open="0" type="814" id="l5wAzxyMVekY"/>
+      <listitem open="0" type="814" id="HlH3FzoismVa"/>
+      <listitem open="0" type="814" id="lEy3W5AHB6P8"/>
+     </listitem>
+     <listitem open="1" type="813" id="j8V04zDCJp4z"/>
+     <listitem open="1" type="813" id="1OSX0C5IvKJA"/>
+     <listitem open="1" type="813" id="PaiP2f1jlWkn"/>
+     <listitem open="0" type="830" id="Datatypes">
+      <listitem open="1" type="829" id="Mc1xwBif1QuP"/>
+      <listitem open="1" type="829" id="aURZQbSHUdXM"/>
+      <listitem open="1" type="829" id="II9ntg7EI69C"/>
+      <listitem open="1" type="829" id="ZWjhj1HHThqu"/>
+      <listitem open="1" type="829" id="jskHO9cM7DJc"/>
+      <listitem open="1" type="829" id="yvIYaudLiyEY"/>
+      <listitem open="1" type="829" id="NkIqR6ihPsSG"/>
+      <listitem open="1" type="829" id="HpsHGmenJOU0"/>
+      <listitem open="1" type="829" id="wGHL7S3jFWcO"/>
+      <listitem open="1" type="829" id="WXSpec1tRrAh"/>
+      <listitem open="1" type="829" id="G5mdvEtRmKEQ"/>
+      <listitem open="1" type="829" id="epVvBxtWf9M4"/>
+      <listitem open="1" type="829" id="4f2sGEXCAoji"/>
+      <listitem open="1" type="829" id="I7tArMldahe6"/>
+      <listitem open="1" type="829" id="TvxnizkNJI99"/>
+     </listitem>
+    </listitem>
+    <listitem open="1" type="802" id="Use Case View"/>
+    <listitem open="1" type="821" id="Component View"/>
+    <listitem open="1" type="827" id="Deployment View"/>
+    <listitem open="1" type="836" id="Entity Relationship Model"/>
+   </listitem>
+  </listview>
+  <codegeneration>
+   <codegenerator language="C++"/>
+  </codegeneration>
+ </XMI.extensions>
+</XMI>
