@@ -43,13 +43,26 @@ structure
 A part's model may reference primitive data (integer etc.) or another model,
 just like one database table may reference another.
 
+A compound is comparable to a database table with four columns for:
+name, abstraction (type), model, details (meta properties).
+
+Two solutions were considered for implementing the cyboi knowledge schema:
+1 OLD: The four columns are kept as pointer arrays and have to be handed
+  over as parametres from function to function, whenever a part is to be
+  manipulated.
+  Advantage: fast access, especially when comparing fields of two parts
+  Disadvantage: tedious handling due to many parametres
+2 NEW: A part structure keeps the four fields belonging to the part.
+  The compound is nothing than one single pointer array keeping
+  references to the parts.
+  Advantage: easy handling, only one part parametre has to be forwarded
+  Disadvantage: worse performance when reading and comparing part fields,
+  since these cause an additional pointer access for each part.
+
 Old CYBOI Names
 _______________
 
 item: formerly called model
-
-model: formerly split into compound and part; both are now merged,
-as suggested by the CYBOP knowledge schema
 
 Introduction
 ____________
